fix tile-action and tile-inner float and overflow issue

--- a/css/base.css
+++ b/css/base.css
@@ -7638,7 +7638,7 @@ legend[class*="col-xx-"] {
 .tile-inner {
   padding: 12px 16px;
   position: relative; }
-  .tile-side ~ .tile-inner {
+  .tile-action ~ .tile-inner, .tile-side ~ .tile-inner {
     overflow: hidden; }
 
 .tile-side-container {
