--- a/sass/element/_tile.scss
+++ b/sass/element/_tile.scss
@@ -87,6 +87,7 @@
 	.tile-inner {
 		padding: ($line-height / 2) $grid-gutter;
 		position: relative;
+		.tile-action ~ &,
 		.tile-side ~ & {
 			overflow: hidden;
 		}
